# coverage-prepare

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: main.rs
